--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   
     <CENTER>
       <p> <b>👽 Alien runner game level 1 :</b> 
-      <a href ="https://navaneet239.github.io/NPJ_alienRunnerGame/"><font color= "blue"> click here </font></a></p>
+      <a href ="https://navaneet239.github.io/NPJ_alienRunnerGame/"><img src="https://icons.iconarchive.com/icons/iconsmind/outline/128/One-Finger-icon.png" width="20", height="20"></a></p>
       <b>👽 Alien runner game level 2 :</b>
-      <a href ="https://navaneet239.github.io/alienRunnerGame2/"><font color= "blue"> click here </font></a> </p>
+      <a href ="https://navaneet239.github.io/alienRunnerGame2/"><img src="https://icons.iconarchive.com/icons/icons8/ios7/128/Hands-Two-Fingers-icon.png" width="20", height="20"></a> </p>
       <b>👽 Alien runner game level 3 :</b>
-      <a href ="https://navaneet239.github.io/alienRunnerGame3/"><font color= "blue"> click here </font></a> </p>
+      <a href ="https://navaneet239.github.io/alienRunnerGame3/"><img src="https://icons.iconarchive.com/icons/icons8/ios7/128/Hands-Three-Fingers-icon.png" width="20", height="20"></a> </p>
       <p><b>👽 Alien runner game level 4 :</b>
-      <a href ="https://navaneet239.github.io/alienRunnerGame4/"><font color= "blue"> click here </font></a> </p>
+      <a href ="https://navaneet239.github.io/alienRunnerGame4/"><img src="https://icons.iconarchive.com/icons/icons8/ios7/128/Hands-Four-Fingers-icon.png" width="20", height="20"></a> </p>
       <p><b>👽 Alien runner game level 5 :</b>
-      <a href ="https://navaneet239.github.io/AlienRunnerGame5/"><font color= "blue"> click here </font></a> </p>
+      <a href ="https://navaneet239.github.io/AlienRunnerGame5/"><img src="https://icons.iconarchive.com/icons/iconsmind/outline/128/Five-Fingers-icon.png" width="20", height="20"></a> </p>
       <h4 align= "CENTER"><font color= "red">❗ Remember, these games should be played in a Pc/desktop due to the compatibility with it. The game won't work in a phone or any tab.❗</font> </h4>
     </CENTER>
 
